--- a/Fly.WebUI/Views/Aircrafts/Index.cshtml
+++ b/Fly.WebUI/Views/Aircrafts/Index.cshtml
@@ -3,8 +3,6 @@
 @model AircraftsViewModel;
 @inject IViewLocalizer Localizer
 
-
-
 <div class="card text-center mx-auto" style="width:1200px">
     <img class="card-img-top" src="~/aircraft.jpg">
     <div class="card-body">
@@ -28,7 +26,7 @@
                 </div>
                 <br />
                 <div class="card-body">
-                    @if (User.IsInRole("Administrator"))
+                    @if (User.IsInRole("Administrator") || User.IsInRole("Manager"))
                     {
                         @Html.ActionLink("Create", "Create")
                     }
