--- a/Fly.WebUI/Views/Aircrafts/Create.cshtml
+++ b/Fly.WebUI/Views/Aircrafts/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Fly.Core.Entities.Aircraft
+﻿@model CreateAircarftVm
 
 <div class="card  mx-auto" style="width:1000px">
     <img class="card-img-top" src="~/aircraft.jpg">
@@ -31,20 +31,20 @@
                 </div>
             <br />
                 @if(User.IsInRole("Administrator"))
-                {
-                    <div class="form-group">
+            {
+                <div class="form-group">
                         <label asp-for="AirlineId" class="control-label"></label>
                         <input asp-for="AirlineId" class="form-control" />
                         <span asp-validation-for="AirlineId" class="text-danger"></span>
                 </div>
-                <br />
-                }
+            <br />
+            }
                 <div class="form-group">
                     <label asp-for="AirportId" class="control-label"></label>
                     <input asp-for="AirportId" class="form-control" />
                     <span asp-validation-for="AirportId" class="text-danger"></span>
-                </div>
-            <br />
+            </div><br />
+            
                 <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-primary" />
                 </div>
