--- a/Fly.WebUI/Views/Manager/Index.cshtml
+++ b/Fly.WebUI/Views/Manager/Index.cshtml
@@ -21,4 +21,21 @@
         <a href="/airports" class="stretched-link"></a>
     </div>
 </div>
+<br />
+<div class="card bg-dark text-white text-center mx-auto" style="width:1000px">
+    <img class="card-img" src="~/seat.jpg" alt="Card image">
+    <div class="card-img-overlay">
+        <p class="display-1 card-title text-uppercase text-dark ">Seats</p>
+        <a href="/seats" class="stretched-link"></a>
+    </div>
+</div>
+<br />
+<div class="card bg-dark text-white text-center mx-auto" style="width:1000px">
+    <img class="card-img" src="~/ticket.jpg" alt="Card image">
+    <div class="card-img-overlay">
+        <p class="display-1 card-title text-uppercase text-light ">Tickets</p>
+        <a href="/tickets" class="stretched-link"></a>
+    </div>
+</div>
+<br />
 
