--- a/Fly.WebUI/Views/Airports/Details.cshtml
+++ b/Fly.WebUI/Views/Airports/Details.cshtml
@@ -1,20 +1,20 @@
 ﻿@model Fly.Core.Entities.Airport
 
-<div>
-    <h4>Airport</h4>
-    <hr />
+<div class="card text-center mx-auto" style="width:1000px">
+    <img class="card-img-top" src="~/airport.jpg">
+    <div class="card-body">
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            Name
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AirportId)
+            Airport
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AirportId)
+            @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Longitude)
@@ -35,10 +35,13 @@
             @Html.DisplayFor(model => model.Altitude)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CityId)
+            City
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CityId)
+            @Html.DisplayFor(model => model.City.Name)
+            <br />
+            Counrty:
+            @Html.DisplayFor(model => model.City.IsoCountry)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Id)
@@ -47,9 +50,17 @@
             @Html.DisplayFor(model => model.Id)
         </dd>
     </dl>
-</div>
-<div class="card">
-    <div id="map" style="width: 100%; height: 300px;"></div>
+        <div class="card">
+            <div id="map" style="width: 100%; height: 300px;"></div>
+        </div>
+        <div>
+            @if(User.IsInRole("Administrator"))
+            {
+                @Html.ActionLink("Edit", "Edit", new { id = Model.Id })
+            }
+            <a asp-action="Index">Back to List</a>
+        </div>
+    </div>
 </div>
 
 <script>
@@ -65,9 +76,5 @@
         .openPopup();
 </script>
 
-<div>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    <a asp-action="Index">Back to List</a>
-</div>
 
 
