--- a/Fly.WebUI/Views/Airports/Create.cshtml
+++ b/Fly.WebUI/Views/Airports/Create.cshtml
@@ -47,6 +47,7 @@
     </div>
 </div>
 
+@Html.AntiForgeryToken();
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
