--- a/Fly.WebUI/Views/Aircrafts/Create.cshtml
+++ b/Fly.WebUI/Views/Aircrafts/Create.cshtml
@@ -56,6 +56,8 @@
     </div>
 </div>
 
+@Html.AntiForgeryToken();
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
