--- a/Fly.WebUI/Views/Flights/Create.cshtml
+++ b/Fly.WebUI/Views/Flights/Create.cshtml
@@ -36,7 +36,7 @@
     </div>
 </div>
 
-
+@Html.AntiForgeryToken();
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
