add ValidateAntiForgeryToken for edit

--- a/Fly.WebUI/Views/Cities/Edit.cshtml
+++ b/Fly.WebUI/Views/Cities/Edit.cshtml
@@ -35,6 +35,8 @@
     </div>
 </div>
 
+@Html.AntiForgeryToken();
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
