--- a/Fly.WebUI/Views/Airlines/Edit.cshtml
+++ b/Fly.WebUI/Views/Airlines/Edit.cshtml
@@ -32,7 +32,7 @@
     </div>
 </div>
 
-
+@Html.AntiForgeryToken();
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
