--- a/Fly.WebUI/Views/Flights/Edit.cshtml
+++ b/Fly.WebUI/Views/Flights/Edit.cshtml
@@ -43,7 +43,7 @@
     </div>
 </div>
 
-
+@Html.AntiForgeryToken();
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
