--- a/Fly.WebUI/Views/Tickets/Edit.cshtml
+++ b/Fly.WebUI/Views/Tickets/Edit.cshtml
@@ -49,6 +49,7 @@
     </div>
 </div>
 
+@Html.AntiForgeryToken();
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
