--- a/Fly.WebUI/Views/Aircrafts/Create.cshtml
+++ b/Fly.WebUI/Views/Aircrafts/Create.cshtml
@@ -3,26 +3,26 @@
 <div class="card  mx-auto" style="width:1000px">
     <img class="card-img-top" src="~/aircraft.jpg">
     <div class="card-body">
-            <form asp-action="Create">
+        <form asp-action="Create">
+        <br />
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="ModelType" class="control-label"></label>
+                <input asp-for="ModelType" class="form-control" />
+                <span asp-validation-for="ModelType" class="text-danger"></span>
+            </div>
             <br />
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="ModelType" class="control-label"></label>
-                    <input asp-for="ModelType" class="form-control" />
-                    <span asp-validation-for="ModelType" class="text-danger"></span>
-                </div>
-                <br />
-                <div class="form-group">
-                    <label asp-for="SerialNumber" class="control-label"></label>
-                    <input asp-for="SerialNumber" class="form-control" />
-                    <span asp-validation-for="SerialNumber" class="text-danger"></span>
-                </div>
+            <div class="form-group">
+                <label asp-for="SerialNumber" class="control-label"></label>
+                <input asp-for="SerialNumber" class="form-control" />
+                <span asp-validation-for="SerialNumber" class="text-danger"></span>
+            </div>
             <br />
-                <div class="form-group">
-                    <label asp-for="ManufactureDate" class="control-label"></label>
-                    <input asp-for="ManufactureDate" class="form-control" />
-                    <span asp-validation-for="ManufactureDate" class="text-danger"></span>
-                </div>
+            <div class="form-group">
+                <label asp-for="ManufactureDate" class="control-label"></label>
+                <input asp-for="ManufactureDate" class="form-control" />
+                <span asp-validation-for="ManufactureDate" class="text-danger"></span>
+            </div>
             <br />
                 <div class="form-group">
                     <label asp-for="FlightHours" class="control-label"></label>
@@ -30,29 +30,31 @@
                     <span asp-validation-for="FlightHours" class="text-danger"></span>
                 </div>
             <br />
-                @if(User.IsInRole("Administrator"))
+            @if(User.IsInRole("Administrator"))
             {
                 <div class="form-group">
-                        <label asp-for="AirlineId" class="control-label"></label>
-                        <input asp-for="AirlineId" class="form-control" />
-                        <span asp-validation-for="AirlineId" class="text-danger"></span>
+                    <label asp-for="AirlineId" class="control-label"></label>
+                    <input asp-for="AirlineId" value="@ViewData["SelectedAirlineId"]" class="form-control" />
+                    <span asp-validation-for="AirlineId" class="text-danger"></span>
+                    @Html.ActionLink("Select","Index","Airlines", new { isSelect = true, redirectUri = "/aircrafts/create" })
                 </div>
             <br />
             }
-                <div class="form-group">
-                    <label asp-for="AirportId" class="control-label"></label>
-                    <input asp-for="AirportId" class="form-control" />
-                    <span asp-validation-for="AirportId" class="text-danger"></span>
-            </div><br />
-            
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
-                </div>
-            </form>
-        <br />
-            <div>
-                <a asp-action="Index">Back to List</a>
+            <div class="form-group">
+                <label asp-for="AirportId" class="control-label"></label>
+                <input asp-for="AirportId" value="@ViewData["SelectedAirportId"]" readonly class="form-control" />
+                <span asp-validation-for="AirportId" class="text-danger"></span>
+                @Html.ActionLink("Select","Index","Airports", new { isSelect = true, redirectUri = "/aircrafts/create" })
             </div>
+            <br />
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+        </form>
+        <br />
+        <div>
+            <a asp-action="Index">Back to List</a>
+        </div>
     </div>
 </div>
 
