--- a/Fly.WebUI/Views/Aircrafts/Index.cshtml
+++ b/Fly.WebUI/Views/Aircrafts/Index.cshtml
@@ -12,14 +12,19 @@
                     <label class="control-label">Model Type</label>
                     <input asp-for="AircraftParameter.ModelType" class="form-control" />
                 </div>
-                <div class="col">
-                    <label class="control-label">Aircraft State</label>
-                    <input asp-for="AircraftParameter.AircraftState" class="form-control" />
-                </div>
+                @if(!Model.IsSelect)
+                {
+                    <div class="col">
+                        <label class="control-label">Aircraft State</label>
+                        <input asp-for="AircraftParameter.AircraftState" class="form-control" />
+                    </div>
+                }
                 <div class="col">
                     <label class="control-label">Airline</label>
                     <input asp-for="AircraftParameter.Airline" class="form-control" />
                 </div>
+                @Html.HiddenFor(x=>x.RedirectUri)
+                @Html.HiddenFor(x=>x.IsSelect)
                 <div class="col">
                     <br />
                     <input type="submit" onclick="setStartPage()" value=@Localizer["Search"] class="btn btn-primary" />
@@ -27,9 +32,9 @@
                 <br />
                 <div class="card-body">
                     @if (User.IsInRole("Administrator") || User.IsInRole("Manager"))
-                {
-                    @Html.ActionLink("Create", "Create")
-                }
+                    {
+                        @Html.ActionLink("Create", "Create")
+                    }
                     <table class="table rounded rounded-6 overflow-hidden table-sm table-dark table-hover">
                         <thead>
                             <tr>
@@ -90,12 +95,17 @@
                                         @Html.DisplayFor(modelItem => item.Id)
                                     </td>
                                     <td>
+                                        @if(Model.IsSelect)
+                                        {
+                                            @Html.ActionLink("Select","Select", new { id = item.Id, redirectUri = Model.RedirectUri})
+                                        }
+
                                         @if (User.IsInRole("Administrator"))
-                                    {
-                                        @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-                                        <br />
-                                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                                    }
+                                        {
+                                            @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                                            <br />
+                                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                        }
                                         @Html.ActionLink("Details", "Details", new { id=item.Id })
                                     </td>
                                 </tr>
@@ -111,17 +121,17 @@
                     <input hidden="true" asp-for="MetaData.CurrentPage" value="@Model.MetaData.CurrentPage" id="pageNumber" class="form-control" />
                 </div>
                 @if (Model.MetaData.HasPrevious)
-            {
-                <div class="col">
-                        <input type="submit" value="Prev" onclick="decrementValue()" class="btn btn-outline-primary" />
+                {
+                    <div class="col">
+                         <input type="submit" value="Prev" onclick="decrementValue()" class="btn btn-outline-primary" />
                     </div>
-            }
+                }
                 @if (Model.MetaData.HasNext)
-            {
-                <div class="col">
+                {
+                    <div class="col">
                         <input type="submit" value="Next" onclick="incrementValue()" class="btn btn-outline-primary" />
                     </div>
-            }
+                }
             </div>
         </form>
     </div>
