--- a/Fly.WebUI/Views/Airlines/Index.cshtml
+++ b/Fly.WebUI/Views/Airlines/Index.cshtml
@@ -12,6 +12,8 @@
                     <label  class="control-label">Name</label>
                     <input asp-for="AirlineParameter.Name" class="form-control" />
                 </div>
+                @Html.HiddenFor(x=>x.RedirectUri)
+                @Html.HiddenFor(x=>x.IsSelect)
                 <div class="col">
                     <br />
                     <input type="submit" onclick="setStartPage()" value=@Localizer["Search"] class="btn btn-primary" />
@@ -44,28 +46,32 @@
                             @foreach (var item in Model.PagedResponse)
                         {
                             <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Name)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Phone)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.RegistrationAddress)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Id)
-                                    </td>
-                                    <td>
-                                        @if (User.IsInRole("Administrator"))
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Phone)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.RegistrationAddress)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Id)
+                                </td>
+                                <td>
+                                    @if (Model.IsSelect)
+                                    {
+                                        @Html.ActionLink("Select","Select", new { id = item.Id, redirectUri = Model.RedirectUri})
+                                    }
+                                    @if (User.IsInRole("Administrator"))
                                     {
                                         @Html.ActionLink("Edit", "Edit", new { id = item.Id })
                                         <br />
                                         @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                                     }
-                                        @Html.ActionLink("Details", "Details", new { id=item.Id })
-                                    </td>
-                                </tr>
+                                    @Html.ActionLink("Details", "Details", new { id=item.Id })
+                                </td>
+                            </tr>
                         }
                         </tbody>
                     </table>
