--- a/Fly.WebUI/Views/Cities/Index.cshtml
+++ b/Fly.WebUI/Views/Cities/Index.cshtml
@@ -12,6 +12,8 @@
                     <label class="control-label">Name</label>
                     <input asp-for="CityParameter.Name" class="form-control" />
                 </div>
+                @Html.HiddenFor(x=>x.RedirectUri)
+                @Html.HiddenFor(x=>x.IsSelect)
                 <div class="col">
                     <br/>
                     <input type="submit" onclick="setStartPage()" value=@Localizer["Search"] class="btn btn-primary" />
@@ -19,9 +21,9 @@
                 <br />
                 <div class="card-body">
                     @if (User.IsInRole("Administrator"))
-                {
-                    @Html.ActionLink("Create", "Create")
-                }
+                    {
+                        @Html.ActionLink("Create", "Create")
+                    }
                     <table class="table rounded rounded-6 overflow-hidden table-sm table-dark table-hover">
                         <thead>
                             <tr>
@@ -51,12 +53,16 @@
                                         @Html.DisplayFor(modelItem => item.IsoRegion)
                                     </td>
                                     <td>
+                                        @if (Model.IsSelect)
+                                        {
+                                            @Html.ActionLink("Select","Select", new { id = item.Id, redirectUri = Model.RedirectUri})
+                                        }
                                         @if (User.IsInRole("Administrator"))
-                                    {
-                                        @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-                                        <br />
-                                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                                    }
+                                        {
+                                            @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                                            <br />
+                                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                        }
                                         @Html.ActionLink("Details", "Details", new { id=item.Id })
                                     </td>
                                 </tr>
