--- a/Fly.WebUI/Views/Flights/Create.cshtml
+++ b/Fly.WebUI/Views/Flights/Create.cshtml
@@ -8,12 +8,14 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="AircraftId" class="control-label"></label>
-                <input asp-for="AircraftId" class="form-control" />
+                <input asp-for="AircraftId" value="@ViewData["SelectedAircraftId"]" readonly class="form-control" />
                 <span asp-validation-for="AircraftId" class="text-danger"></span>
+                @Html.ActionLink("Select","Index","Aircrafts", new { isSelect = true, redirectUri = "/flights/create" })
             </div><br />
             <div class="form-group">
                 <label asp-for="ArrivalAirportId" class="control-label"></label>
-                <input asp-for="ArrivalAirportId" class="form-control" />
+                <input asp-for="ArrivalAirportId" value="@ViewData["SelectedAirportId"]" readonly class="form-control" />
+                @Html.ActionLink("Select","Index","Airports", new { isSelect = true, redirectUri = "/flights/create" })
                 <span asp-validation-for="ArrivalAirportId" class="text-danger"></span>
             </div><br />
             <div class="form-group">
