--- a/Fly.WebUI/Views/Managers/Index.cshtml
+++ b/Fly.WebUI/Views/Managers/Index.cshtml
@@ -16,6 +16,8 @@
                     <label class="control-label">User Name</label>
                     <input asp-for="ManagerParameter.UserName" class="form-control" />
                 </div>
+                @Html.HiddenFor(x=>x.RedirectUri)
+                @Html.HiddenFor(x=>x.IsSelect)
                 <div class="col">
                     <br />
                     <input type="submit" onclick="setStartPage()" value=@Localizer["Search"] class="btn btn-primary" />
@@ -51,31 +53,35 @@
                             @foreach (var item in Model.PagedResponse)
                         {
                             <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.User.UserName)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Airline.Name)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.User.Email)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.User.Messages.Count)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.User.PhoneNumber)
-                                    </td>
-                                    <td>
-                                        @if (User.IsInRole("Administrator"))
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.User.UserName)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Airline.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.User.Email)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.User.Messages.Count)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.User.PhoneNumber)
+                                </td>
+                                <td>
+                                    @if (Model.IsSelect)
+                                    {
+                                        @Html.ActionLink("Select","Select", new { id = item.Id, redirectUri = Model.RedirectUri})
+                                    }
+                                    @if (User.IsInRole("Administrator"))
                                     {
                                         @Html.ActionLink("Edit", "Edit", new { id = item.Id })
                                         <br />
                                         @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                                     }
-                                        @Html.ActionLink("Details", "Details", new { id=item.Id })
-                                    </td>
-                                </tr>
+                                    @Html.ActionLink("Details", "Details", new { id=item.Id })
+                                </td>
+                            </tr>
                         }
                         </tbody>
                     </table>
