--- a/Fly.WebUI/Views/Seats/Create.cshtml
+++ b/Fly.WebUI/Views/Seats/Create.cshtml
@@ -24,8 +24,9 @@
             </div><br />
             <div class="form-group">
                 <label asp-for="AircraftId" class="control-label"></label>
-                <input asp-for="AircraftId" class="form-control" />
+                <input asp-for="AircraftId" value="@ViewData["SelectedAircraftId"]" readonly class="form-control" />
                 <span asp-validation-for="AircraftId" class="text-danger"></span>
+                @Html.ActionLink("Select","Index","Aircrafts", new { isSelect = true, redirectUri = "/seats/create" })
             </div><br />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
