--- a/Fly.WebUI/Views/Tickets/Create.cshtml
+++ b/Fly.WebUI/Views/Tickets/Create.cshtml
@@ -10,8 +10,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FlightId" class="control-label"></label>
-                <input asp-for="FlightId" class="form-control" />
+                <input asp-for="FlightId" readonly value="@ViewData["SelectedFlightId"]" class="form-control" />
                 <span asp-validation-for="FlightId" class="text-danger"></span>
+                @Html.ActionLink("Select","Index","Flights", new { isSelect = true, redirectUri = "/tickets/create" })
             </div><br />
             <div class="form-group">
                 <label asp-for="EconomClassPrice" class="control-label"></label>
@@ -25,7 +26,7 @@
             </div><br />
             <div class="form-group">
                 <label asp-for="BusinessClassPrice" class="control-label"></label>
-                <input asp-for="BusinessClassPrice" class="form-control" />
+                <input asp-for="BusinessClassPrice"   class="form-control" />
                 <span asp-validation-for="BusinessClassPrice" class="text-danger"></span>
             </div><br />
             <div class="form-group">
@@ -35,12 +36,13 @@
         <div>
             <a asp-action="Index">Back to List</a>
         </div>
-
     </div>
 </div>
 
 @Html.AntiForgeryToken();
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
