--- a/Fly.WebUI/Views/Airlines/Index.cshtml
+++ b/Fly.WebUI/Views/Airlines/Index.cshtml
@@ -21,9 +21,9 @@
                 <br />
                 <div class="card-body">
                     @if (User.IsInRole("Administrator"))
-                {
-                    @Html.ActionLink("Create", "Create")
-                }
+                    {
+                        @Html.ActionLink("Create", "Create")
+                    }
                     <table class="table rounded rounded-6 overflow-hidden table-sm table-dark table-hover">
                         <thead>
                             <tr>
@@ -59,17 +59,20 @@
                                     @Html.DisplayFor(modelItem => item.Id)
                                 </td>
                                 <td>
-                                    @if (Model.IsSelect)
-                                    {
-                                        @Html.ActionLink("Select","Select", new { id = item.Id, redirectUri = Model.RedirectUri})
-                                    }
-                                    @if (User.IsInRole("Administrator"))
-                                    {
-                                        @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-                                        <br />
-                                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                                    }
-                                    @Html.ActionLink("Details", "Details", new { id=item.Id })
+                                        @if (Model.IsSelect)
+                                        {
+                                            @Html.ActionLink("Select","Select", new { id = item.Id, redirectUri = Model.RedirectUri})
+                                        }
+                                        else
+                                        {
+                                            @if (User.IsInRole("Administrator"))
+                                            {
+                                                @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                                                <br />
+                                                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                            }
+                                        }
+                                        @Html.ActionLink("Details", "Details", new { id=item.Id })
                                 </td>
                             </tr>
                         }
