--- a/Fly.WebUI/Views/Flights/Index.cshtml
+++ b/Fly.WebUI/Views/Flights/Index.cshtml
@@ -28,10 +28,10 @@
                 </div>
                 <br />
                 <div class="card-body">
-                    @if (User.IsInRole("Administrator"))
-                {
-                    @Html.ActionLink("Create", "Create")
-                }
+                    @if (User.IsInRole("Administrator") || User.IsInRole("Manager"))
+                    {
+                        @Html.ActionLink("Create", "Create")
+                    }
                     <table class="table rounded rounded-6 overflow-hidden table-sm table-dark table-hover">
                         <thead>
                             <tr>
@@ -92,11 +92,14 @@
                                     {
                                         @Html.ActionLink("Select","Select", new { id = item.Id, redirectUri = Model.RedirectUri})
                                     }
-                                    @if (User.IsInRole("Administrator"))
+                                    else
                                     {
-                                        @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-                                        <br />
-                                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                        @if (User.IsInRole("Administrator"))
+                                        {
+                                            @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                                            <br />
+                                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                        }
                                     }
                                     @Html.ActionLink("Details", "Details", new { id=item.Id })
                                 </td>
