--- a/Fly.WebUI/Views/Seats/Index.cshtml
+++ b/Fly.WebUI/Views/Seats/Index.cshtml
@@ -16,7 +16,7 @@
                 </div>
                 <br />
                 <div class="card-body">
-                    @if (User.IsInRole("Administrator"))
+                    @if (User.IsInRole("Administrator") || User.IsInRole("Manager"))
                     {
                         @Html.ActionLink("Create", "Create")
                     }
@@ -61,11 +61,18 @@
                                         @Html.DisplayFor(modelItem => item.Tickets.Count)
                                     </td>
                                     <td>
-                                        @if (User.IsInRole("Administrator"))
+                                        @if (Model.IsSelect)
                                         {
-                                            @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-                                            <br />
-                                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                            @Html.ActionLink("Select","Select", new { id = item.Id, redirectUri = Model.RedirectUri})
+                                        }
+                                        else
+                                        {
+                                            @if (User.IsInRole("Administrator"))
+                                            {
+                                                @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                                                <br />
+                                                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                            }
                                         }
                                         @Html.ActionLink("Details", "Details", new { id=item.Id })
                                     </td>
@@ -74,7 +81,6 @@
                         </tbody>
                     </table>
                 </div>
-
                 <div class="col">
                     <input asp-for="MetaData.PageSize" min="1" value="@Model.MetaData.PageSize" class="form-control" />
                 </div>
