--- a/Fly.WebUI/Views/Tickets/Index.cshtml
+++ b/Fly.WebUI/Views/Tickets/Index.cshtml
@@ -44,10 +44,10 @@
                 </div>
                 <br />
                 <div class="card-body">
-                    @if (User.IsInRole("Administrator"))
-                {
-                    @Html.ActionLink("Create", "Create")
-                }
+                    @if (User.IsInRole("Administrator") || User.IsInRole("Manager"))
+                    {
+                        @Html.ActionLink("Create", "Create")
+                    }
                     <table class="table rounded rounded-6 overflow-hidden table-sm table-dark table-hover">
                         <thead>
                             <tr>
@@ -109,11 +109,18 @@
                                         @Html.DisplayFor(modelItem => item.Passenger.LastName)
                                     </td>
                                     <td>
-                                        @if (User.IsInRole("Administrator"))
+                                        @if(Model.IsSelect)
                                         {
-                                            @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-                                            <br />
-                                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                            @Html.ActionLink("Select","Select", new { id = item.Id, redirectUri = Model.RedirectUri})
+                                        }
+                                        else
+                                        {
+                                            @if (User.IsInRole("Administrator"))
+                                            {
+                                                @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                                                <br />
+                                                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                            }
                                         }
                                         @Html.ActionLink("Details", "Details", new { id=item.Id })
                                     </td>
