--- a/Fly.WebUI/Views/Airlines/Details.cshtml
+++ b/Fly.WebUI/Views/Airlines/Details.cshtml
@@ -1,8 +1,8 @@
 ﻿@model Fly.Core.Entities.Airline
 
-<div>
-    <h4>Airline</h4>
-    <hr />
+<div class="card  mx-auto" style="width:600px">
+    <img class="card-img-top" src="~/airline.jpg">
+    <div class="card-body">
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
@@ -17,7 +17,7 @@
             @Html.DisplayFor(model => model.Phone)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RegistrationAddress)
+            Address
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.RegistrationAddress)
@@ -30,7 +30,5 @@
         </dd>
     </dl>
 </div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new { id=Model.Id }) |
-    <a asp-action="Index">Back to List</a>
 </div>
+
