--- a/Fly.WebUI/Views/Cities/Details.cshtml
+++ b/Fly.WebUI/Views/Cities/Details.cshtml
@@ -1,8 +1,8 @@
 ﻿@model Fly.Core.Entities.City
 
-<div>
-    <h4>City</h4>
-    <hr />
+<div class="card  mx-auto" style="width:600px">
+    <img class="card-img-top" src="~/city.jpg">
+    <div class="card-body">
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
@@ -11,13 +11,13 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsoCountry)
+            Country
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IsoCountry)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsoRegion)
+           Region
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IsoRegion)
@@ -30,7 +30,4 @@
         </dd>
     </dl>
 </div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new { id=Model.Id }) |
-    <a asp-action="Index">Back to List</a>
 </div>
