--- a/Fly.WebUI/Views/Managers/Details.cshtml
+++ b/Fly.WebUI/Views/Managers/Details.cshtml
@@ -1,21 +1,23 @@
 ﻿@model Fly.Core.Entities.Manager
 
-<div>
-    <h4>Manager</h4>
-    <hr />
+<div class="card mx-auto" style="width:600px">
+    <img class="card-img-top" src="~/flight.jpg">
+    <div class="card-body">
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AirlineId)
+            AirlineId
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AirlineId)
+            @Html.DisplayFor(model => model.Airline.Name)
         </dd>
+
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UserId)
+            Email
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UserId)
+            @Html.DisplayFor(model => model.User.Email)
         </dd>
+
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Id)
         </dt>
@@ -23,8 +25,4 @@
             @Html.DisplayFor(model => model.Id)
         </dd>
     </dl>
-</div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new { id=Model.Id }) |
-    <a asp-action="Index">Back to List</a>
 </div>
