--- a/Fly.WebUI/Views/Tickets/Details.cshtml
+++ b/Fly.WebUI/Views/Tickets/Details.cshtml
@@ -1,8 +1,8 @@
 ﻿@model Fly.Core.Entities.Ticket
 
-<div>
-    <h4>Ticket</h4>
-    <hr />
+<div class="card mx-auto" style="width:600px">
+    <img class="card-img-top" src="~/seat.jpg">
+    <div class="card-body">
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
@@ -48,7 +48,4 @@
         </dd>
     </dl>
 </div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    <a asp-action="Index">Back to List</a>
 </div>
