--- a/Fly.WebUI/Views/Aircrafts/Edit.cshtml
+++ b/Fly.WebUI/Views/Aircrafts/Edit.cshtml
@@ -1,6 +1,5 @@
 ﻿@model Fly.Core.Entities.Aircraft
 
-
 <div class="card  mx-auto" style="width:1000px">
     <img class="card-img-top" src="~/aircraft.jpg">
     <div class="card-body">
@@ -40,10 +39,7 @@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
-        </form><br />
-        <div>
-            <a asp-action="Index">Back to List</a>
-        </div>
+        </form>
     </div>
 </div>
 
