--- a/Fly.WebUI/Views/Managers/Edit.cshtml
+++ b/Fly.WebUI/Views/Managers/Edit.cshtml
@@ -21,10 +21,7 @@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
-        </form><br />
-        <div>
-            <a asp-action="Index">Back to List</a>
-        </div>
+        </form>
     </div>
 </div>
 
