--- a/Fly.WebUI/Views/Flights/Details.cshtml
+++ b/Fly.WebUI/Views/Flights/Details.cshtml
@@ -95,7 +95,7 @@
                             @Html.DisplayFor(modelItem => item.Seat.SeatClass)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Seat.Row) : 
+                            @Html.DisplayFor(modelItem => item.Seat.Row)  
                             @Html.DisplayFor(modelItem => item.Seat.Column)
                         </td>
 
