--- a/Fly.WebUI/Views/Seats/Create.cshtml
+++ b/Fly.WebUI/Views/Seats/Create.cshtml
@@ -31,11 +31,7 @@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
-        </form>
-        <br />
-        <div>
-            <a asp-action="Index">Back to List</a>
-        </div>
+        </form><br />
     </div>
 </div>
 
