add user tickets view

--- a/Fly.WebUI/Views/Passenger/Profile.cshtml
+++ b/Fly.WebUI/Views/Passenger/Profile.cshtml
@@ -59,7 +59,9 @@
                 <div class="form-group">
                     <input type="submit" value="Save" class="btn btn-primary" />
                 </div>
+                <br />
             </fieldset>
+            @Html.ActionLink("Back", "Index")
         </form>
     </div>
 </div>
