--- a/Fly.WebUI/Views/Passenger/Index.cshtml
+++ b/Fly.WebUI/Views/Passenger/Index.cshtml
@@ -1,5 +1,19 @@
 ﻿<div class="row">
     <dic class="col">
-        
+        <div class="card bg-dark text-white text-center mx-auto" style="width:500px">
+            <img class="card-img" src="~/ticket.jpg" alt="Card image">
+            <div class="card-img-overlay">
+                <p class="display-1 card-title text-uppercase text-light ">Tickets</p>
+                <a href="~/passenger/tickets" class="stretched-link"></a>
+            </div>
+        </div>
+        <br />
+        <div class="card bg-dark text-white text-center mx-auto" style="width:500px">
+            <img class="card-img" src="~/flight.jpg" alt="Card image">
+            <div class="card-img-overlay">
+                <p class="display-1 card-title text-uppercase text-light ">Profile</p>
+                <a href="~/passenger/profile" class="stretched-link"></a>
+            </div>
+        </div>
     </dic>
 </div>
