--- a/Fly.WebUI/Views/Passenger/Tickets.cshtml
+++ b/Fly.WebUI/Views/Passenger/Tickets.cshtml
@@ -1,5 +1,141 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using Fly.Core.Entities;
+@using Microsoft.AspNetCore.Mvc.Localization;
+@model TicketsViewModel;
+@inject IViewLocalizer Localizer
+
+<div class="card text-center mx-auto" style="width:1000px">
+    <img class="card-img-top" src="~/ticket.jpg">
+    <div class="card-body">
+        <form asp-action="Tickets">
+            <div class="row">
+                <div class="form-group">
+                    <label class="col">PriceMax</label>
+                    <input asp-for="TicketParameter.PriceMax" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label class="col">PriceMin</label>
+                    <input asp-for="TicketParameter.PriceMin" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label class="col">TicketState</label>
+                    <input asp-for="TicketParameter.TicketState" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label class="col">DepartureDateTime</label>
+                    <input asp-for="TicketParameter.DepartureDateTime" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label class="col"></label>
+                    <input asp-for="TicketParameter.DepartureCity" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label class="col">DepartureCity</label>
+                    <input asp-for="TicketParameter.ArrivalCity" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label class="col">SeatClass</label>
+                    <input asp-for="TicketParameter.SeatClass" class="form-control" />
+                </div>
+                @Html.HiddenFor(x=>x.RedirectUri)
+                @Html.HiddenFor(x=>x.IsSelect)
+                @Html.HiddenFor(x=>x.TicketParameter.PassengerId)
+                <div class="col">
+                    <br />
+                    <input type="submit" onclick="setStartPage()" value=@Localizer["Search"] class="btn btn-primary" />
+                </div>
+                <br />
+                <div class="card-body">
+                    @if (User.IsInRole("Administrator") || User.IsInRole("Manager"))
+                    {
+                        @Html.ActionLink("Create", "Create")
+                    }
+                    <table class="table rounded rounded-6 overflow-hidden table-sm table-dark table-hover">
+                        <thead>
+                            <tr>
+                                <th>
+                                    Price
+                                </th>
+                                <th>
+                                    Sold Date
+                                </th>
+                                <th>
+                                    Departure
+                                </th>
+                                <th>
+                                    Arrival
+                                </th>
+                                <th>
+                                    Class
+                                </th>
+                                <th>
+
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.PagedResponse)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Price)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.SoldDate)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Flight.DepartureAirport.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Flight.ArrivalAirport.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Seat.SeatClass)
+                                    </td>
+                                    <td>
+                                        @Html.ActionLink("Details", "Details", "Tickets", new { id=item.Id })
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col">
+                    <input asp-for="MetaData.PageSize" min="1" value="@Model.MetaData.PageSize" class="form-control" />
+                </div>
+                <div class="col">
+                    <input hidden="true" asp-for="MetaData.CurrentPage" value="@Model.MetaData.CurrentPage" id="pageNumber" class="form-control" />
+                </div>
+                @if (Model.MetaData.HasPrevious)
+                {
+                    <div class="col">
+                        <input type="submit" value="Prev" onclick="decrementValue()" class="btn btn-outline-primary" />
+                    </div>
+                }
+                @if (Model.MetaData.HasNext)
+                {
+                    <div class="col">
+                        <input type="submit" value="Next" onclick="incrementValue()" class="btn btn-outline-primary" />
+                    </div>
+                }
+            </div>
+        </form>
+    </div>
+</div>
+
+<script>
+    function incrementValue() {
+        var value = parseInt(document.getElementById('pageNumber').value, 10);
+        value++;
+        document.getElementById('pageNumber').value = value;
+    }
+
+    function decrementValue() {
+        var value = parseInt(document.getElementById('pageNumber').value, 10);
+        value--;
+        document.getElementById('pageNumber').value = value;
+    }
+
+    function setStartPage() {
+        document.getElementById('pageNumber').value = 1;
+    }
+</script>
