--- a/Fly.IdentityServer/Pages/Account/Register/Index.cshtml
+++ b/Fly.IdentityServer/Pages/Account/Register/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿@page
 @model Fly.IdentityServer.Pages.Account.Register.IndexModel
 
-<hr />
+<p>
+    @Model.ErrorMessage
+</p>
 <div class="row">
     <div class="col-md-4">
         <form method="post" asp-antiforgery="true">
